--- a/flask/templates/form.html
+++ b/flask/templates/form.html
@@ -3,13 +3,13 @@
 <form method=post>
   <dl>
     <dt>Definition</dt>
-    <dd><textarea rows=20 cols=80 name="xml_raw">{{ xml_raw | e }}</textarea></dd>
+    <dd><textarea rows=20 cols=80 name="xml_model">{{ xml_model | e }}</textarea></dd>
     <dt>Tactics</dt>
     <dd><textarea rows=10 cols=80 name="tactics">{{ tactics | e }}</textarea></dd>
     <dt>Initial Condition</dt>
-    <dd><textarea rows=3 cols=80 name="initial">{{ initial | e }}</textarea></dd>
+    <dd><input size=80 name="initial" value="{{ initial | e }}"></dd>
     <dt>Safety Condition</dt>
-    <dd><textarea rows=1 cols=80 name="safety">{{ safety | e }}</textarea></dd>
+    <dd><input size=80 name="safety" value="{{ safety | e }}"></dd>
     <dt>Result</dt>
     <dd><textarea rows=10 cols=80 name="result" readonly>{{ result | e }}</textarea></dd>
   </dl>
