--- a/flask/templates/app.html
+++ b/flask/templates/app.html
@@ -4,7 +4,7 @@
     <title>HybridPDR</title>
   </head>
   <body>
-    <div id="dirPage"></div>
+    <div id="app"></div>
     <script src="static/bundle.js"></script>
   </body>
 </html>
