--- a/flask/templates/app.html
+++ b/flask/templates/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>HybridPDR</title>
+    <title>HybridPDR - app</title>
   </head>
   <body>
     <div id="app"></div>
