configure webpack to work with multi-page application

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="dirPage"></div>
-    <script src="static/bundle.js"></script>
+    <script src="static/index.js"></script>
   </body>
 </html>
