--- a/flask/templates/app.html
+++ b/flask/templates/app.html
@@ -5,6 +5,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="static/app.js"></script>
+    <script type="text/javascript">
+      const selectedFilePath = '{{ selectedFilePath }}';
+    </script>
+    <script src="/static/app.js"></script>
   </body>
 </html>
