make explorer fancy

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>HybridPDR</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="dirPage"></div>
