make application page GitHub-flavoured

--- a/flask/css/app.css
+++ b/flask/css/app.css
@@ -1,3 +1,9 @@
+h4 {
+  margin-bottom: 0.5rem;
+  color: #24292e;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 dl {
   margin-left: 50px;
 }
