--- a/flask/css/app.css
+++ b/flask/css/app.css
@@ -46,3 +46,54 @@ dd {
 .resultDl {
   margin-left: 50px;
 }
+
+.textareaStyle {
+  width: 424px;
+  height: 350px;
+  padding: 0px 4px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+  font-size: 12px;
+  color: #000;
+  line-height: 14px;
+  resize: none;
+}
+
+.buttonContainerStyle {
+  overflow: hidden;
+}
+
+.debugStyle {
+  display: flex;
+  align-items: center;
+  float: left;
+  margin-top: 10px;
+  margin-left: 370px;
+  width: 150px;
+  height: 35px;
+}
+
+.checkboxStyle {
+  margin-right: 8px;
+}
+
+.labelStyle {
+  padding: .375rem .75rem;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+}
+
+.buttonStyle {
+  float: right;
+  margin-top: 10px;
+  width: 80px;
+  height: 35px;
+  background-color: #28a745;
+  background-image: linear-gradient(-180deg,#34d058,#28a745 90%);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 14px;
+};
