fromat code and rename function

--- a/flask/css/index.css
+++ b/flask/css/index.css
@@ -44,6 +44,10 @@ a:not([href]):not([tabindex]).aStyle {
   cursor: pointer;
 }
 
+a:not([href]):not([tabindex]).aStyle:hover {
+  color: #013066;
+}
+
 .rdBox {
   float: right;
 }
